--- a/results.html
+++ b/results.html
@@ -11,9 +11,9 @@
         <h1>Résultats des Questionnaires</h1>
     </header>
     <main>
-        <section id="resultats">
-            <h2>Résultats</h2>
-            <div id="results-summary"></div>
+        <section id="results">
+            <h2>Résultats par Questionnaire</h2>
+            <div id="results-container"></div>
         </section>
     </main>
 </body>
